Adding DAL Layer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,9 +25,9 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 # JDBC - Java DB Connection (Driver)
 
 #-------------------------- POSTGRES --------------------------
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
 
 # Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -59,4 +59,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialec
 #logging.level.org.mongodb.driver: ERROR
 
 spring.data.mongodb.uri=mongodb+srv://weParkDB:Aa5896451@wepark.mtayl.mongodb.net/weParkDB?retryWrites=true&w=majority
+#						mongodb+srv://weParkDB:<password>@wepark.mtayl.mongodb.net/<dbname>?retryWrites=true&w=majority
 
