complete User Related API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,4 +60,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialec
 
 spring.data.mongodb.uri=mongodb+srv://weParkDB:Aa5896451@wepark.mtayl.mongodb.net/weParkDB?retryWrites=true&w=majority
 #						mongodb+srv://weParkDB:<password>@wepark.mtayl.mongodb.net/<dbname>?retryWrites=true&w=majority
+#spring.data.mongodb.uri=mongodb+srv://avrahamrada:Aa5896451@cluster0.kr8pf.mongodb.net/<dbname>?retryWrites=true&w=majority
 
