update AWS S3 amazon service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,3 +62,9 @@ spring.data.mongodb.uri=mongodb+srv://weParkDB:Aa5896451@wepark.mtayl.mongodb.ne
 #						mongodb+srv://weParkDB:<password>@wepark.mtayl.mongodb.net/<dbname>?retryWrites=true&w=majority
 #spring.data.mongodb.uri=mongodb+srv://avrahamrada:Aa5896451@cluster0.kr8pf.mongodb.net/<dbname>?retryWrites=true&w=majority
 
+# AWS S3 configuration
+#aws.access_key_id=AKIATMLKY7FE3DVIVKFL
+#aws.secret_access_key=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
+#aws.s3.bucket=avrahamwepark
+#aws.s3.region=<s3_region>
+
